--- a/manifest.json
+++ b/manifest.json
@@ -11,7 +11,7 @@
     "128": "assets/icon128.png"
   },
   "background": {
-    "service_worker": "service_worker.js"
+    "service_worker": "scripts/service_worker.js"
   },
   "options_page": "options.html",
   "permissions": [
