Updates to manifest for Chrome and Firefox extension submission

--- a/manifest.json
+++ b/manifest.json
@@ -11,25 +11,29 @@
     "128": "assets/icon128.png"
   },
   "background": {
-    "service_worker": "scripts/service_worker.js"
+    "service_worker": "scripts/service_worker.js",
+
+    "scripts": ["scripts/service_worker.js"]   
   },
   "options_page": "options.html",
   "permissions": [
     "tabs",
 	  "activeTab",
     "storage",
-    "webRequest",
-    "contextMenus",
-	  "scripting"
-  ],
-  "host_permissions": [
-	"http://*/*", 
-	"https://*/*"
+    "scripting"
   ],
   "action": {
     "default_icon": "assets/icon128.png",
     "default_popup": "popup.html",
     "default_title": "CTG Autoclicker"
   },
-  "content_security_policy": {}
+  "content_security_policy": {},
+  "browser_specific_settings": {
+    "gecko": {
+      "id": "@ctg-autoclicker.setec7",
+      "data_collection_permissions": {
+        "required": ["none"]
+      }
+    }
+  }
 }
